--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             </div>
         </div>
     </section>
-    <script src="view.js"></script>
-    <script src="main.js"></script>
+
+    <script type="module" src="main.js"></script>
 
 </body>
 </html>
